# freetype-wrapper

./: CMakeLists.txt  LICENSE  README.md
examples/example1/: CMakeLists.txt  main.cpp
freetype-wrapper/: CMakeLists.txt  Font.cpp  Font.h
